--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ rand="0.3.0"
 lazy_static = "1.1.0"
 clippy = { version = "*", optional = true }
 chrono = "0.4"
+time = "0.1"
 
 [dependencies.kifuwarabe_shell]
 git = "https://github.com/muzudho/rust_kifuwarabe_shell.git"
